# saxaboom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yml  publish.yaml
bindings_generator/: Cargo.toml  runtime_wrapper.h  wrapper.h
bindings_generator/src/: main.rs
examples/: compute_shader.rs  convert-dxil.rs
examples/assets/: memcpy.cs.dxil
runtime/: Cargo.toml  README.md
runtime/src/: bindings.rs  lib.rs
src/: bindings.rs  lib.rs  main.rs  types.rs
test/: output.dxil
