[package]
name = "saxaboom"
version = "0.0.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/saxaboom"
description = "Binding library for metal_irconverter"
include = ["src", "LICENSE", "CONTRIBUTING.md"]
categories = ["api-bindings", "external-ffi-bindings", "graphics"]
keywords = ["metal", "shader", "metal_irconverter", "apple"]

[workspace]
members = [
    "bindings_generator"
]

[dependencies]
libloading = "0.8"
