[package]
name = "saxaboom"
version = "0.2.0-beta.1+irconverter-2.0.4"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/saxaboom"
description = "Binding library for Metal Shader Converter"
include = ["src", "LICENSE"]
categories = ["api-bindings", "external-ffi-bindings", "graphics", "compilers"]
keywords = ["metal", "shader", "metal_irconverter", "apple", "macos"]
rust-version = "1.81"

[workspace]
members = [
    "bindings_generator",
    "runtime",
]

[dependencies]
libloading = "0.8"
thiserror = "2.0"

[patch.crates-io]
# Add as_raw: https://github.com/madsmtm/objc2/commit/94f104fd352fb26f191ef9f3c2ccee869ef73703
objc2 = { git = "https://github.com/madsmtm/objc2.git", rev = "94f104fd352fb26f191ef9f3c2ccee869ef73703" }
objc2-metal = { git = "https://github.com/madsmtm/objc2.git", rev = "94f104fd352fb26f191ef9f3c2ccee869ef73703" }
