[package]
name = "saxaboom"
version = "0.2.0+irconverter-2.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/saxaboom"
description = "Binding library for Metal Shader Converter"
include = ["src", "LICENSE"]
categories = ["api-bindings", "external-ffi-bindings", "graphics", "compilers"]
keywords = ["metal", "shader", "metal_irconverter", "apple", "macos"]
rust-version = "1.81"

[workspace]
members = [
    "bindings_generator",
    "runtime",
]

[dependencies]
libloading = "0.9"
thiserror = "2.0"
