[package]
name = "saxaboom-runtime"
version = "0.2.0+irconverter-2.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/saxaboom"
description = "Runtime definitions for Metal Shader Converter"
categories = ["api-bindings", "external-ffi-bindings", "graphics"]
keywords = ["metal", "shader", "metal_irconverter", "apple", "macos"]
rust-version = "1.81"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin", # presented first in docs.rs, keep this here
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
  "x86_64-apple-darwin",
  "x86_64-apple-ios",
]

[dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-metal = { version = "0.3", default-features = false, features = ["std", "MTLAllocation", "MTLResource", "MTLBuffer", "MTLTexture", "MTLSampler", "MTLTypes"] }
